# thermal-uvc

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  main.cpp  thermal_uvc  thermal_uvc_checker
